improved docs, cleaning
